[gd_scene load_steps=6 format=3 uid="uid://dtmh7h36yyiyf"]

[ext_resource type="Script" path="res://Units/Player.gd" id="1_e7ent"]
[ext_resource type="PackedScene" uid="uid://lek0jjxj3i5y" path="res://Components/movement_physics.tscn" id="2_aiiq6"]
[ext_resource type="PackedScene" uid="uid://cq51wxypscfeh" path="res://Units/LittleWitch/little_witch.tscn" id="3_8ko61"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_3d5xi"]
friction = 0.1

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_qrji7"]
height = 1.5

[node name="Player" type="RigidBody3D"]
mass = 10.0
physics_material_override = SubResource("PhysicsMaterial_3d5xi")
script = ExtResource("1_e7ent")

[node name="MovementPhysics" parent="." instance=ExtResource("2_aiiq6")]

[node name="LittleWitch" parent="." instance=ExtResource("3_8ko61")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, -1.5, 0)

[node name="Skeleton3D" parent="LittleWitch/Armature" index="0"]
bones/0/position = Vector3(1.848e-17, 0.449385, -0.290186)
bones/0/rotation = Quaternion(0.0220941, 0.605926, 0.795185, -0.00678881)
bones/1/rotation = Quaternion(0.0065432, 0.716336, 0.697619, 0.01219)
bones/2/rotation = Quaternion(-0.0572906, -0.0203946, 0.0253254, 0.997828)
bones/3/rotation = Quaternion(-0.0664223, 0.000655666, -0.00648666, 0.99777)
bones/4/rotation = Quaternion(-0.0273457, 0.0338235, -0.00582552, 0.999037)
bones/6/rotation = Quaternion(0.54649, 0.552221, 0.472161, -0.416491)
bones/7/rotation = Quaternion(-0.230316, 0.0509428, -0.00936968, 0.971736)
bones/8/rotation = Quaternion(0.069409, 0.0184947, -0.0223728, 0.997166)
bones/9/rotation = Quaternion(0.0236522, -9.50267e-05, -0.0106566, 0.999663)
bones/10/rotation = Quaternion(0.55082, -0.535132, -0.468858, -0.436353)
bones/11/rotation = Quaternion(-0.219718, -0.0576787, -0.00645119, 0.973836)
bones/12/rotation = Quaternion(0.0729295, -0.0186811, 0.01247, 0.997084)
bones/13/rotation = Quaternion(0.0248535, 3.43717e-05, 0.00607653, 0.999673)
bones/14/rotation = Quaternion(-0.00828366, -0.041145, 0.721333, 0.691316)
bones/15/rotation = Quaternion(-0.679801, -0.553343, 0.419697, 0.235663)
bones/16/rotation = Quaternion(0.794314, -0.0198416, -0.147543, 0.588985)
bones/17/rotation = Quaternion(0.0226726, 0.0398256, -0.686692, 0.725502)
bones/18/rotation = Quaternion(0.540051, -0.518146, 0.551833, -0.367898)
bones/19/rotation = Quaternion(0.0623856, -0.0385123, 0.0174896, 0.997155)

[node name="AnimationTree" parent="LittleWitch" index="2"]
parameters/RunSpeed/scale = 1.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.272481, 0)
shape = SubResource("CapsuleShape3D_qrji7")

[editable path="LittleWitch"]
